css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
$base-font-size:   16px;
$base-font-weight: 300;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;



// Using media queries with like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import "bootstrap";

// @import
//         "base"
//         "layout",
//         "syntax-highlighting"
// ;

.cool-colors {
    background: #FFD500 none repeat scroll 0% 0%;
    font-size: 3rem !important;
    color: #FFF;
    padding: 0 1rem;
    box-shadow: 0px 0px 0px 10px #FFAD19, 16px 16px 0px 4px #5633F4;
    text-shadow: 0.01rem 0.05rem 0.15rem rgba(0, 0, 0, 0.8);
    line-height: 1.4;
}

q:before, q:after {
    content: "";
}

.navbar-brand {
    float: none;
    padding-top: 0;
    padding-bottom: 0;
    a {
        &:hover {
            text-decoration: none;
        }
    }
}

.navbar {
    padding: 0.4rem 2rem 0rem 2rem;

    .nav-item {
        float: none;
        display: inline-block;
        + .nav-item {
            margin-left: 0;
        }
    }
}

.navbar-nav .nav-link:hover {
    &:not(.active) {
      border-bottom: .5rem solid transparent;
      border-bottom-color: rgb(69, 208, 62);
    }
}

